// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SPage/Users/Purchase Snapshot > renders cancelled state correctly 1`] = `
"<div class="success-container">
  <div>
    <h1>❌ Cancelled</h1>
    <p>Your payment was cancelled.</p>
  </div>
  <p> Redirecting to <a href="#">/cancel</a> in 10 seconds. </p>
</div>"
`;

exports[`SPage/Users/Purchase Snapshot > renders error state correctly 1`] = `
"<div class="success-container">
  <div>
    <h1>⚠️ Error</h1>
    <p>There was an error processing your payment. - Payment failed</p>
  </div>
  <p> Redirecting to <a href="#">/error</a> in 10 seconds. </p>
</div>"
`;

exports[`SPage/Users/Purchase Snapshot > renders success state correctly 1`] = `
"<div class="success-container">
  <div>
    <h1>🎉 Success!</h1>
    <p>Your payment was processed successfully.</p>
  </div>
  <p> Redirecting to <a href="#">/success</a> in 10 seconds. </p>
</div>"
`;

exports[`SPage/Users/Purchase Snapshot > renders unknown state correctly 1`] = `
"<div class="success-container">
  <div>
    <h1>❓ Unknown</h1>
    <p>Unknown error.</p>
  </div>
  <p> Redirecting to <a href="#">/</a> in 10 seconds. </p>
</div>"
`;
